Create initial tournament list
Add create tournament

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -8,7 +8,7 @@
         </li>
         {% if request.user.is_authenticated %}
             <li>KSF Golf</li>
-            <li>Tournaments & Results</li>
+            <li><a href={% url 'tournaments:list' %}>Tournaments & Results</a></li>
             <li>
                 <a href="{% url 'accounts:logout' %}">Logout</a>
             </li>
