--- a/templates/tournaments/partials/form.html
+++ b/templates/tournaments/partials/form.html
@@ -2,9 +2,17 @@
     <form action="." method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Add tournament ">
+        <input type="reset" value="Reset">
+        <input type="submit" value="{% if form.instance.pk %}Update{% else %}Add Tournament{% endif %}">
+        <input type="button" value="Back" onclick="goBack()">
     </form>
     {% if message %}
         {{ message }}
     {% endif %}
 </section>
+
+<script>
+    function goBack() {
+        window.location.href = "{% url 'tournaments:list' %}"
+    }
+</script>
