--- a/templates/tournaments/list.html
+++ b/templates/tournaments/list.html
@@ -9,13 +9,23 @@
     {% endif %}
     <section>
         {% if object_list %}
+            <form id="delete-form" action="{% url 'tournaments:delete-tournaments' %}" method="post">
+                {% csrf_token %}
+                <input id="delete-button" type="submit" value="Delete selection">
 
-            <h1>Tournament calendar {{ current_year }}</h1>
-            {% for tournament in object_list %}
-                <p>
+                <h1>Tournament calendar {{ current_year }}</h1>
+                {% for tournament in object_list %}
+                    <p class="tournament-{{ tournament.id }}">
+                        <label>
+                            <input type="checkbox" name="delete-checkboxes" class="delete-checkbox" value="{{ tournament.id }}">
+                        </label>
+                        <span>
                     {{ tournament.course }}: {{ tournament.date }} ; Tee time: {{ tournament.tee_time }}
-                    <span><a href={% url 'tournaments:edit-tournament' tournament.slug %}>Edit</a></span></p>
-            {% endfor %}
+                    <span><a href={% url 'tournaments:edit-tournament' tournament.slug %}>Edit</a></span></span>
+                    </p>
+                {% endfor %}
+            </form>
+
         {% else %}
             <h1>No tournaments available</h1>
         {% endif %}
