add test to edit tournament

--- a/templates/tournaments/partials/form.html
+++ b/templates/tournaments/partials/form.html
@@ -9,6 +9,12 @@
     {% if message %}
         {{ message }}
     {% endif %}
+    {% if form.errors %}
+        {% for error in form.errors %}
+        	{{ error }}
+        {% endfor %}
+        
+{% endif %}
 </section>
 
 <script>
