--- a/templates/tournaments/partials/overview.html
+++ b/templates/tournaments/partials/overview.html
@@ -5,13 +5,14 @@
         {#    L´idée sera de justifier chaque div pour les répartir sur l´axe horizontal de manière à former un tableau#}
         <div>
             <p>Date: <span>{{ object.date }}</span></p>
-            <p>Allowed handicap: <span><= {{ object.hcp }}</span></p>
+            <p>Allowed handicap: <span><= {{ object.hcp_limit }}</span></p>
             <p>Tournament supervisor: <span>{{ object.supervisor }}</span></p>
         </div>
         <div>
 
             <p>First Tee: <span>{{ object.tee_time }}</span></p>
             <p>Relevant for handicap: <span>{% if tournament.hcp_relevant %}Yes{% else %}No{% endif %}</span></p>
+            <p>Email: <span>{{ object.supervisor.email }}</span></p>
         </div>
     </section>
     <section>
@@ -21,7 +22,7 @@
         <div>
             <p>Date: <span>{{ object.date }}</span></p>
             <p>Allowed handicap: <span><= {{ object.hcp }}</span></p>
-            <p>Tournament supervisor: <span>{{ object.supervisor }}</span></p>
+            <p>Phone : <span>Current not available</span></p>
         </div>
         <div>
 
