subsitute the slug by the ids in the url pattern

--- a/templates/tournaments/partials/overview.html
+++ b/templates/tournaments/partials/overview.html
@@ -1,6 +1,7 @@
 {% block detail-content %}
     <section>
 
+        <p>last update:{{ object.elapsed_time }}</p>
         <h1>Informations</h1>
         <table>
             <tr>
