--- a/templates/tournaments/details.html
+++ b/templates/tournaments/details.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section>
     <a href={% url 'tournaments:list' %}><- Back to tournament list</a>
-    <a href={% url 'tournaments:detail' object.slug 'overview' %}>Overview</a>
+    <a href={% url 'tournaments:detail' object.pk 'overview' %}>Overview</a>
     <a>Participants</a>
     <a>Participate!</a>
     </section>
