refactor the button in tournament list

--- a/templates/tournaments/list.html
+++ b/templates/tournaments/list.html
@@ -3,32 +3,56 @@
 {% block content %}
     {% if request.user.is_superuser %}
         <section>
-            <a href={% url 'tournaments:create' %}>Add Tournaments</a>
-            <a href={% url 'tournaments:create-course' %}>Add Courses</a>
-        </section>
-    {% endif %}
-    <section>
-        {% if object_list %}
-            <form id="delete-form" action="{% url 'tournaments:delete' %}" method="post">
-                {% csrf_token %}
-                <input id="delete-button" type="submit" value="Delete selection">
+        <form method="post">
+        {% csrf_token %}
+        <input value="Add tournament" type="button" onclick="window.location.href='{% url 'tournaments:create' %}'">
+        <input value="Add course" type="button" onclick="window.location.href='{% url 'tournaments:create-course' %}'">
+            {% if object_list %}
+                <input type="submit" value="Delete selection" onclick="this.form.action='{% url 'tournaments:delete' %}';">
+            {% endif %}
 
-                <h1>Tournament calendar {{ current_year }}</h1>
-                {% for tournament in object_list %}
-                    <p class="tournament-{{ tournament.id }}">
-                        <label>
-                            <input type="checkbox" name="delete-checkboxes" class="delete-checkbox" value="{{ tournament.id }}">
-                        </label>
-                        <span>
-                    {{ tournament.course }}: {{ tournament.date }} ; Tee time: {{ tournament.tee_time }}
-                    <span><a href={{ tournament.get_edit_url }}>Edit</a></span>
-                    <span><a href={{ tournament.get_absolute_url }}>View</a></span></span>
-                    </p>
-                {% endfor %}    
-            </form>
+    <h1>Tournament calendar {{ current_year }}</h1>
+    <table>
+        <thead>
+        <tr>
+            <th>Select</th>
+            <th>Course</th>
+            <th>Date</th>
+            <th>Tee Time</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for tournament in object_list %}
+            <tr class="tournament-{{ tournament.id }}">
+                <td>
+                    <label>
+                        <input type="checkbox" name="delete-checkboxes" class="delete-checkbox"
+                               value="{{ tournament.id }}">
+                    </label>
+                </td>
+                <td>{{ tournament.course }}</td>
+                <td>{{ tournament.date }}</td>
+                <td>{{ tournament.tee_time }}</td>
+                <td>
+                    <details>
+                        <summary>...</summary>
+                        <nav>
+                            <ul>
+                                <li><a href="{{ tournament.get_absolute_url }}">View</a></li>
+                                <li><a href="{{ tournament.get_edit_url }}">Edit</a></li>
+                            </ul>
+                        </nav>
+                    </details>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    </form>
 
-        {% else %}
-            <h1>No tournaments available</h1>
-        {% endif %}
-    </section>
+{% else %}
+    <h1>No tournaments available</h1>
+{% endif %}
+</section>
 {% endblock %}
