--- a/templates/tournaments/partials/participants.html
+++ b/templates/tournaments/partials/participants.html
@@ -1,37 +1,21 @@
 {% block detail-content %}
     <section>
-        <input value="Export flights" type="button"
-               onclick="window.location.href='{% url 'tournaments:export-flights' pk=object.pk %}'">
+        <button hx-get="{% url 'tournaments:fetch_flights' %}?tpk={{ object.pk }}" 
+                hx-swap="innerHTML" 
+                hx-target="#ParticipantContent" 
+                hx-trigger="click">Show flights</button>
+        <button hx-get="{% url 'tournaments:fetch_competitors' %}?tpk={{ object.pk }}" 
+                hx-swap="innerHTML" 
+                hx-target="#ParticipantContent" 
+                hx-trigger="click">Show registration list</button>
     </section>
     <section>
         <p>last update: {{ object.elapsed_time }}</p>
         <h1>Participants</h1>
         <h2>{{ course.name }} ({{ object.date }})</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>First name</th>
-                <th>Family name</th>
-                <th>Department</th>
-                <th>HCP</th>
-                <th>Membership</th>
-                <th>Email</th>
-                <th>Phone</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for  participant in participants %}
-                <tr>
-                    <td>{{ participant.first_name }}</td>
-                    <td>{{ participant.family_name }}</td>
-                    <td>{{ participant.department }}</td>
-                    <td>{{ participant.hcp }}</td>
-                    <td>Membership not available</td>
-                    <td>{{ participant.user.email }}</td>
-                    <td>{{ participant.phone_number }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <div id="ParticipantContent">
+            {% include 'tournaments/partials/competitors.html' %}
+        </div>
+
     </section>
 {% endblock %}
