--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,7 @@
     <title>KSF Golf</title>
 
     {% load static %}
-{#    <script src="{% static 'js/htmx.min.js' %}" defer></script>#}
-    <script src="https://unpkg.com/htmx.org@1.4.0"></script>
+    <script src="{% static 'js/htmx.min.js' %}" defer></script>
 </head>
 <body>
 
