--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,6 +5,8 @@
     <meta charset="UTF-8">
     <title>KSF Golf</title>
 
+    {% load static %}
+    <script src="{% static 'js/htmx.min.js' %}" defer></script>
 </head>
 <body>
 
@@ -30,5 +31,12 @@
 </main>
 
 <footer>placeholder footer</footer>
+
+<script>
+    document.body.addEventListener('htmx:configRequest', (event) => {
+        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+    })
+</script>
+
 </body>
 </html>
